Fixing some layout issues

--- a/assets/_sass/_footer.scss
+++ b/assets/_sass/_footer.scss
@@ -1,3 +1,5 @@
 section.footer {
 	padding-bottom: 5em;
+	margin-top: 2em !important;
+	padding-top: 3em !important;
 }
