--- a/assets/_sass/_sections.scss
+++ b/assets/_sass/_sections.scss
@@ -1,4 +1,4 @@
-.gradient, .gradientrev {
+section.gradient, section.gradientrev {
 	color: #fff;
 	a { 
 		padding: 0.25em 1em;
@@ -22,6 +22,9 @@ section:first-of-type {
 	margin-top: -9em;
 }
 
+section p {
+	line-height: 1.5em;
+}
 
 section.image {
 	background-position: bottom right, top center;
@@ -29,6 +32,7 @@ section.image {
 	background-size: cover, cover;
 	background-blend-mode: multiply, normal;
 	color: #fff;
+	margin-bottom: 0em;
 }
 
 section {
